Bug 1624944 - Uniform data uploads should accept SharedArrayBuffers. r=webidl,hsivonen

Differential Revision: https://phabricator.services.mozilla.com/D68508

--HG--
extra : moz-landing-system : lando