dom/canvas/ClientWebGLContext.h
@@ -604,9 +604,9 @@ class WebGLVertexArrayJS final : public nsWrapperCache, public webgl::ObjectJS {
 
 ////////////////////////////////////
 
-typedef dom::Float32ArrayOrUnrestrictedFloatSequence Float32ListU;
-typedef dom::Int32ArrayOrLongSequence Int32ListU;
-typedef dom::Uint32ArrayOrUnsignedLongSequence Uint32ListU;
+typedef dom::MaybeSharedFloat32ArrayOrUnrestrictedFloatSequence Float32ListU;
+typedef dom::MaybeSharedInt32ArrayOrLongSequence Int32ListU;
+typedef dom::MaybeSharedUint32ArrayOrUnsignedLongSequence Uint32ListU;
 
 inline Range<const float> MakeRange(const Float32ListU& list) {
   if (list.IsFloat32Array()) return MakeRangeAbv(list.GetAsFloat32Array());
